--- a/python/晒好了的那一面.md
+++ b/python/晒好了的那一面.md
@@ -1,6 +1,6 @@
 ## 24.4.15
 
-- md文档的编写：这是一个链接 [Markdown语法](https://markdown.com.cn "官方教程")
+- md文档的编写：[Markdown语法](https://markdown.com.cn "官方教程")
   - 其实之前就看过了好几几遍吧? 就是都忘记了 不写就啥也不记得了
   - 现在打算日更 那每天的md肯定得写 那这个应该也不会不熟练吧 应该不会在忘记了吧 不会吧不会吧
 - 把自己的代码推到这上面
