update: commit username and Email

--- a/python/晒好了的那一面.md
+++ b/python/晒好了的那一面.md
@@ -16,3 +16,7 @@
   - pip install pipenv 这个就直接执行 会放到python的安装目录下的Scripts里面 不会放到c盘
   - 之后虚拟环境的创建 默认是在c盘下有个.virtualenv文件夹里面 但是可以通过环境变量来改变 
   - 新建系统变量 WORKON_HOME 然后改成自己想要的路径（need重启）
+- 把git提交的用户名和邮箱改一下 只改成此项目的 因为不想和公司的混用
+  - git config user.name xxx / git config user.email xxx
+  - 但是貌似也可以ide里面修改成github的用户名
+  - 还可以添加ssh 或者 gpg 密钥验证 但是这个用不到目前 比较啥也不是现在
