update: md & code

--- a/python/晒好了的那一面.md
+++ b/python/晒好了的那一面.md
@@ -20,3 +20,10 @@
   - git config user.name xxx / git config user.email xxx
   - 但是貌似也可以ide里面修改成github的用户名
   - 还可以添加ssh 或者 gpg 密钥验证 但是这个用不到目前 比较啥也不是现在
+- 上传了一下之间的软件包 unzipPW：kitkitkit (这儿应该只有我知道吧)
+
+## 24.4.17
+
+- ps: 看了一点基础 进度缓慢 不过感觉这周五应该看个差不多吧   
+  py的语法格式如果没写过的人可能还适应 但是go写多了 这个还有点不适用 还有空格换行都得格式化完成 自己反正不想敲空格  
+  (这个方法貌似还有点作用 因为虽然进度缓慢 但是至少每天想着这个东西了 能看能学一点是一点)
