update: md & code

--- a/python/晒好了的那一面.md
+++ b/python/晒好了的那一面.md
@@ -27,3 +27,10 @@
 - ps: 看了一点基础 进度缓慢 不过感觉这周五应该看个差不多吧   
   py的语法格式如果没写过的人可能还适应 但是go写多了 这个还有点不适用 还有空格换行都得格式化完成 自己反正不想敲空格  
   (这个方法貌似还有点作用 因为虽然进度缓慢 但是至少每天想着这个东西了 能看能学一点是一点)
+
+## 24.4.18
+
+- ps: 这个方法确实管用噢 毕竟想每天更新(周六日？) 摸了一天鱼 快下班的时候发现没更 赶紧学一下
+  - 看了最后的一些类型 必交基础 快速过了一遍 内置的方法就是看了一眼有这个方法 感觉还是得写代码 熟悉才能记得住
+  - 迭代器和生成器貌似挺重要的 没看太明白 明天从这儿再看一遍 之后就是看最主要的func和class 明天应该就能看完基础了
+  - 下周一or周六日(大概率周六日不更23333) 就开始写点儿代码什么的
