update: md & code

--- a/python/晒好了的那一面.md
+++ b/python/晒好了的那一面.md
@@ -34,3 +34,10 @@
   - 看了最后的一些类型 必交基础 快速过了一遍 内置的方法就是看了一眼有这个方法 感觉还是得写代码 熟悉才能记得住
   - 迭代器和生成器貌似挺重要的 没看太明白 明天从这儿再看一遍 之后就是看最主要的func和class 明天应该就能看完基础了
   - 下周一or周六日(大概率周六日不更23333) 就开始写点儿代码什么的
+
+## 24.4.19
+
+- ps: 大概语法看的差不多了 高级用法还没看 现在差不多应该可以用py写代码了 今天开始打算每天一道leetCode 之后的话用py写吧
+  今天先用的go
+  - 这种方法确实有点效果哟 至少有了些自驱力 而且发现自己对于写代码 还是有兴趣的 那会虽然做了一道简单题  
+    但是看到提交通过后 还是有点小小的成就感的 希望也可以每天把算法题坚持下去
