--- a/python/晒好了的那一面.md
+++ b/python/晒好了的那一面.md
@@ -1,43 +1,24 @@
 ## 24.4.15
 
 - md文档的编写：[Markdown语法](https://markdown.com.cn "官方教程")
-  - 其实之前就看过了好几几遍吧? 就是都忘记了 不写就啥也不记得了
-  - 现在打算日更 那每天的md肯定得写 那这个应该也不会不熟练吧 应该不会在忘记了吧 不会吧不会吧
+    - 其实之前就看过了好几几遍吧? 就是都忘记了 不写就啥也不记得了
+    - 现在打算日更 那每天的md肯定得写 那这个应该也不会不熟练吧 应该不会在忘记了吧 不会吧不会吧
 - 把自己的代码推到这上面
-  - 之前学了一段时间的git 就是说 又忘了 只不过对于常用的没忘了 一些没用到的 我这鱼（pig）脑子肯定忘了
+    - 之前学了一段时间的git 就是说 又忘了 只不过对于常用的没忘了 一些没用到的 我这鱼（pig）脑子肯定忘了
 
 ## 24.4.16
 
-- 昨天也没学多少(没学) 主要一直想把github的仓库拉到本地 完了本地在新建"工程" 然后把代码推上去 但是一直反着来 搞了半天 fish&pig脑子 我也fo了
-  - 今天继续搞 其实非常简单 远程把仓库建好 到这一步就ok了 不用再远程继续往下了 当然 md还是可以写一下的
-  - 然后 clone到本地 直接在这个里面新建项目就ok了 然后推上去就行了 要么就是都是在本地新建 然后推上去
+- 昨天也没学多少(没学) 主要一直想把github的仓库拉到本地 完了本地在新建"工程" 然后把代码推上去 但是一直反着来 搞了半天
+  fish&pig脑子 我也fo了
+    - 今天继续搞 其实非常简单 远程把仓库建好 到这一步就ok了 不用再远程继续往下了 当然 md还是可以写一下的
+    - 然后 clone到本地 直接在这个里面新建项目就ok了 然后推上去就行了 要么就是都是在本地新建 然后推上去
 - 也顺便了解了一下虚拟环境 反正尽量不要不要不要把所有的东西放到c盘 不然日后爆满
-  - 大致看了一下 虚拟环境就是说用pipenv会好一些？ 搜了半天应该是这个结论 毕竟说是其余几种结合的优点 没深入体会
-  - pip install pipenv 这个就直接执行 会放到python的安装目录下的Scripts里面 不会放到c盘
-  - 之后虚拟环境的创建 默认是在c盘下有个.virtualenv文件夹里面 但是可以通过环境变量来改变 
-  - 新建系统变量 WORKON_HOME 然后改成自己想要的路径（need重启）
+    - 大致看了一下 虚拟环境就是说用pipenv会好一些？ 搜了半天应该是这个结论 毕竟说是其余几种结合的优点 没深入体会
+    - pip install pipenv 这个就直接执行 会放到python的安装目录下的Scripts里面 不会放到c盘
+    - 之后虚拟环境的创建 默认是在c盘下有个.virtualenv文件夹里面 但是可以通过环境变量来改变
+    - 新建系统变量 WORKON_HOME 然后改成自己想要的路径（need重启）
 - 把git提交的用户名和邮箱改一下 只改成此项目的 因为不想和公司的混用
-  - git config user.name xxx / git config user.email xxx
-  - 但是貌似也可以ide里面修改成github的用户名
-  - 还可以添加ssh 或者 gpg 密钥验证 但是这个用不到目前 比较啥也不是现在
+    - git config user.name xxx / git config user.email xxx
+    - 但是貌似也可以ide里面修改成github的用户名
+    - 还可以添加ssh 或者 gpg 密钥验证 但是这个用不到目前 比较啥也不是现在
 - 上传了一下之间的软件包 unzipPW：kitkitkit (这儿应该只有我知道吧)
-
-## 24.4.17
-
-- ps: 看了一点基础 进度缓慢 不过感觉这周五应该看个差不多吧   
-  py的语法格式如果没写过的人可能还适应 但是go写多了 这个还有点不适用 还有空格换行都得格式化完成 自己反正不想敲空格  
-  (这个方法貌似还有点作用 因为虽然进度缓慢 但是至少每天想着这个东西了 能看能学一点是一点)
-
-## 24.4.18
-
-- ps: 这个方法确实管用噢 毕竟想每天更新(周六日？) 摸了一天鱼 快下班的时候发现没更 赶紧学一下
-  - 看了最后的一些类型 必交基础 快速过了一遍 内置的方法就是看了一眼有这个方法 感觉还是得写代码 熟悉才能记得住
-  - 迭代器和生成器貌似挺重要的 没看太明白 明天从这儿再看一遍 之后就是看最主要的func和class 明天应该就能看完基础了
-  - 下周一or周六日(大概率周六日不更23333) 就开始写点儿代码什么的
-
-## 24.4.19
-
-- ps: 大概语法看的差不多了 高级用法还没看 现在差不多应该可以用py写代码了 今天开始打算每天一道leetCode 之后的话用py写吧
-  今天先用的go
-  - 这种方法确实有点效果哟 至少有了些自驱力 而且发现自己对于写代码 还是有兴趣的 那会虽然做了一道简单题  
-    但是看到提交通过后 还是有点小小的成就感的 希望也可以每天把算法题坚持下去
