--- a/python/晒好了的那一面.md
+++ b/python/晒好了的那一面.md
@@ -22,3 +22,8 @@
     - 但是貌似也可以ide里面修改成github的用户名
     - 还可以添加ssh 或者 gpg 密钥验证 但是这个用不到目前 比较啥也不是现在
 - 上传了一下之间的软件包 unzipPW：kitkitkit (这儿应该只有我知道吧)
+
+## 24.11.19
+
+- ps: 开始看机器学习的东西了 这部分都是python相关的 所以就在这里更新吧  
+  已经忘了前段时间学习的python了 已经忘光了 那会儿看md 记不起来都 之后等mac回来之后在学吧
