--- a/python/晒好了的那一面.md
+++ b/python/晒好了的那一面.md
@@ -23,7 +23,14 @@
     - 还可以添加ssh 或者 gpg 密钥验证 但是这个用不到目前 比较啥也不是现在
 - 上传了一下之间的软件包 unzipPW：kitkitkit (这儿应该只有我知道吧)
 
-## 24.11.19
+## PS.
 
-- ps: 开始看机器学习的东西了 这部分都是python相关的 所以就在这里更新吧  
+- 24.11.19  
+  ps: 开始看机器学习的东西了 这部分都是python相关的 所以就在这里更新吧  
   已经忘了前段时间学习的python了 已经忘光了 那会儿看md 记不起来都 之后等mac回来之后在学吧
+- 24.11.20  
+  ps: 今天还是背单词 看了一下那个线性回归的代价函数(cost function) 还有梯度下降算法  
+  这些都是和导数还有线代有关的 我现在也看不懂 不知道为什么就突然出来这么个公式 然后就推导出新的公式  
+  理解上还是有一定难度的 单单看某个公式 知道它的目的 但是合到一起就不会了  
+  确实这个算法需要很高的学历或者造诣 毕竟这些个公式 算法 都不是一般人可以学会的  
+  这周把这个梯度下降搞会了 或者代码会写了 这周就还算有收获
